# machine_learning

./: .gitignore  .landscape.yaml  README.md
kaggle_digit recognizer_mnist/: README.md  main.ipynb  simple_nn_keras.py
kaggle_random_forest_classifier/: main.py  requirements.txt
kaggle_random_forest_classifier/data/: evaluation_output.csv
kaggle_random_forest_classifier/data/_mac_os_x/: ._test.json
kaggle_titanic_classifier_feature_engineering/: kaggle_titanic_classifier_analysys.ipynb
kaggle_titanic_classifier_feature_engineering/titanic/: train_X.csv
mnist_mlp_with_dropout_using_pytorch/: mlp_mnist_pytorch.py
neural_net_cpp/: CMakeLists.txt  README.md  fill.cpp  main.cpp  net.cpp  net.h  neuron.cpp  neuron.h  trainingSet.cpp  trainingSet.h
pyspark_decision_tree_&_logistic_regression/: main.ipynb  requirements.txt
